--- a/autentification.html
+++ b/autentification.html
@@ -23,7 +23,7 @@
                     <h5>Зарегистрироваться</h5>
                 </button>
             </div>
-                <div class="log-form login-form">
+                <div class="log-form login-form" id="login">
                     <form>
                         <div class="inputBox">
                             <input type="email" placeholder="Почта">
@@ -32,14 +32,14 @@
                             <input type="password" placeholder="Пароль">
                         </div>
                         <div class="inputBox">
-                            <input type="submit" class="login-btn" value="Войти">
+                            <input type="button" class="login-btn" value="Войти">
                         </div>
                         <p class="form-text"><a href="#">Забыли пароль?</a></p>
                         <p class="form-text message"></p>
                     </form>
                 </div>
 
-                <div class="log-form reg-form">
+                <div class="log-form reg-form" id="reg">
                     <form>
                         <div class="inputBox">
                             <input type="text" placeholder="Имя">
@@ -57,7 +57,7 @@
                             <input type="password" placeholder="Повторите пароль">
                         </div>
                         <div class="inputBox">
-                            <input type="submit" class="wide register-btn" value="Зарегистрироваться">
+                            <input type="button" class="wide register-btn" value="Зарегистрироваться">
                         </div>
                         <p class="form-text message"></p>
                     </form>
