--- a/services.html
+++ b/services.html
@@ -41,10 +41,19 @@
             </div>
         </div>
     </header>
+    <aside class="navigation-panel">
+        <ul>
+            <li><a href="">Стрижки</a></li>
+            <li><a href="">Уход за бородой</a></li>
+            <li><a href="">Окрашивание</a></li>
+            <li><a href="">Косметология</a></li>
+            <li><a href="">Визаж</a></li>
+            <li><a href="">Массаж</a></li>
+            <li><a href="">Специальные услуги</a></li>
+        </ul>
+    </aside>
     <main>
 
-
-        
     </main>
     <footer class="footer">
         <div class="about">
