--- a/services.html
+++ b/services.html
@@ -44,8 +44,8 @@
         </div>
     </header>
     <aside class="navigation-panel">
-        <button class="cancel"><i class="fa-regular fa-circle-xmark"></i></button>
-        <ul class="nav-list">
+        <button class="cancel"><i class="fa-solid fa-list"></i></button>
+        <ul class="nav-list hidden">
             <li><a href="#barbers">Стрижки</a></li>
             <li><a href="#beard">Уход за бородой</a></li>
             <li><a href="#coloring">Окрашивание</a></li>
@@ -91,19 +91,19 @@
                 <div class="price-list">
                     <div class="price-row">
                         <h4 class="service">Мужская стрижка</h4>
-                        <h4 class="price">1500<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">1500 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Женская стрижка</h4>
-                        <h4 class="price">1500<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">1500 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Комплексный уход за волосами</h4>
-                        <h4 class="price">2500<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">2500 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Восстановление волос</h4>
-                        <h4 class="price">3500<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">3500 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                 </div>
             </div>
@@ -131,15 +131,15 @@
                 <div class="price-list">
                     <div class="price-row">
                         <h4 class="service">Бритье</h4>
-                        <h4 class="price">750<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">750 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Уход за бородой</h4>
-                        <h4 class="price">1000<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">1000 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Окрашивание бороды</h4>
-                        <h4 class="price">1300<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">1300 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                 </div>
             </div>
@@ -191,19 +191,19 @@
                 <div class="price-list">
                     <div class="price-row">
                         <h4 class="service">Осветление</h4>
-                        <h4 class="price">7500<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">7500 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Осветление + окрашивание</h4>
-                        <h4 class="price">10000<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">10000 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Креативное окрашивание</h4>
-                        <h4 class="price">20000<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">20000 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Окрашивание + восстановление волос</h4>
-                        <h4 class="price">12000<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">12000 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                 </div>
             </div>
@@ -243,15 +243,15 @@
                 <div class="price-list">
                     <div class="price-row">
                         <h4 class="service">Плазмотерапия</h4>
-                        <h4 class="price">10000<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">10000 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Диагностика кожи</h4>
-                        <h4 class="price">12000<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">12000 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Лазерное омоложение</h4>
-                        <h4 class="price">35000<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">35000 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                 </div>
             </div>
@@ -280,15 +280,15 @@
                 <div class="price-list">
                     <div class="price-row">
                         <h4 class="service">Деловой макияж</h4>
-                        <h4 class="price">2400<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">2400 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Вечерний макияж</h4>
-                        <h4 class="price">3000<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">3000 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Свадебный макияж</h4>
-                        <h4 class="price">5600<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">5600 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                 </div>
             </div>
@@ -317,15 +317,15 @@
                 <div class="price-list">
                     <div class="price-row">
                         <h4 class="service">Расслабляющий массиж</h4>
-                        <h4 class="price">2400<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">2400 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Спортивный массаж</h4>
-                        <h4 class="price">4000<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">4000 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Тайский массаж</h4>
-                        <h4 class="price">3200<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">3200 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                 </div>
             </div>
@@ -375,15 +375,15 @@
                 <div class="price-list">
                     <div class="price-row">
                         <h4 class="service">Полная смена имиджа</h4>
-                        <h4 class="price">от 75000<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">от 75000 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Смена имиджа и повадок</h4>
-                        <h4 class="price">от 150000<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">от 150000 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                     <div class="price-row">
                         <h4 class="service">Пластическая хирургия</h4>
-                        <h4 class="price">от 500000<i class="fa-solid fa-ruble-sign"></i></h4>
+                        <h4 class="price">от 500000 <i class="fa-solid fa-ruble-sign"></i></h4>
                     </div>
                 </div>
             </div>
