--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="card-text">
                         <p>
                            Мне, как актрисе, приходится постоянно менять свой образ, с чем мне регулярно помогают профессионалы 
-                           из goBeuty. К каждому своему фильму я готовлюсь именно с ними, и еещ ни разу не  пожалела об этом.
+                           из goBeauty. К каждому своему фильму я готовлюсь именно с ними, и еещ ни разу не  пожалела об этом.
                         </p>
                     </div>
                </div>
@@ -257,6 +257,9 @@
                     <a href="#">goBeauty@gmail.com</a>
                 </li>
             </ul>
+        </div>
+        <div class="copyright">
+            <h4>© 2023 Ревенко Максим ИКБО-16-22. Все права защищены.</h4>
         </div>
     </footer>
 </body>
