--- a/services.html
+++ b/services.html
@@ -469,6 +469,9 @@
                 </li>
             </ul>
         </div>
+        <div class="copyright">
+            <h4>© 2023 Ревенко Максим ИКБО-16-22. Все права защищены.</h4>
+        </div>
     </footer>
 </body>
 </html>
